--- a/Scripts/compose.yml
+++ b/Scripts/compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   mysql:
     container_name: mariadb
@@ -8,7 +7,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: password
     ports:
       - 3306:3306
   
